<resources>
    <string name="app_name">YUM-YUM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Enter_as_a_guest">Enter as a guest</string>
    <string name="logo_description">this is yum yum logo</string>
    <string name="Signup">Sign up</string>
    <string name="login">Login</string>
    <string name="Guest">Guest</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="Or_login_with">- Or -</string>
    <string name="login_with_google">Login with google</string>
    <string name="Don_t_have_an_account_Yet">Dont have an account Yet</string>
    <string name="Sign_Up">Sign up</string>
    <string name="email">email</string>
    <string name="sign_up_with_google">sign up with google</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="img_description">"this is meal description "</string>
    <string name="country_of_the_day">Country of the day</string>
    <string name="dish_name">dish name</string>
    <string name="love_icon">favorite icon</string>
    <string name="calender_icon">calnder icon</string>
    <string name="instructions">instructions</string>
    <string name="ingredient">ingredient</string>
    <string name="ingredients">ingredient</string>
    <string name="video">video</string>
    <string name="instructions_placeholder">pla pla pla pla 123 pla pla\npla 545456 pla</string>
    <string name="italian">italian</string>
    <string name="popular_dishes">this is image for favorite meal</string>
    <string name="here_you_can_add_your_favourite_recieps">No Favorite Meals yet</string>
    <string name="text_search">text search</string>
    <string name="monday">Monday</string>
    <string name="add_meal">+ Add Meal</string>
    <string name="find_your_favorite_meals">Find Your Favorite Meals</string>
    <string name="select_a_day">Select a day</string>
    <string name="weekly_meal_plan">Weekly Meal Plan</string>
    <string name="no_meals_planned_for_this_week">No meals planned for this week</string>
    <string name="add_meals_from_the_details_screen">Add meals from the details screen</string>
    <string name="login_required">Login Required</string>
    <string name="you_must_login_to_view_your_weekly_meal_plan">You must login to view your weekly meal plan</string>
    <string name="filter_meals">Filter Meals</string>
    <string name="categories">Categories</string>
    <string name="countries_areas">Countries/Areas</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="you_must_login_to_view_your_favorite_recipes">you must login to view your favorite recipes</string>
    <string name="no_favorite_recipes">No Favorite Recipes Yet</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="explore_more_meals">Explore More Meals</string>
    <string name="areas">Areas</string>
    <string name="ingredients_tab">Ingredients</string>
    <string name="no_meals_found">No meals found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_network_settings">Please check your network settings.</string>
</resources>