<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/explore_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/explore_more_meals"
            app:titleTextColor="@color/text_primary" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/explore_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/explore_toolbar"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/primary"
            app:tabIndicatorColor="@color/primary"
            app:tabTextColor="@color/text_primary">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/areas" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_tab" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/explore_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/margin_small"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/explore_tab_layout"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.loadingindicator.LoadingIndicator
        android:id="@+id/explore_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/App.Custom.Indicator"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>
